<resources>

    <string name="app_name">SFood</string>

    <!-- FirstUseActivity -->
    <string name="activity_firstuse_title">SFood</string>
    <string name="activity_firstuse_button_register">Create New Account</string>
    <string name="activity_firstuse_button_notnow">Not Now</string>
    <string name="activity_firstuse_tvWelcome">Welcome to SFood</string>
    <string name="activity_firstuse_tvTitle">Register to use the advanced futures of the system! Do you want register an account now?</string>

    <!-- SearchActivity -->
    <string name="activity_search_title">Search</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_filter">Filter</string>
    <string name="text_btn_list_or_map">Map</string>
    <string name="text_btn_checkin_search">Check-in</string>
    <string name="text_information">INFORMATION</string>
    <string name="text_checkin">CHECK-IN</string>
    <string name="textSeeMore">See more...</string>
	<string name="activity_search_map_title">Map</string>
    <string-array name="distance_array">
        <item>Miles</item>
        <item>Kms</item>
    </string-array>
    <!-- CheckInActivity -->
    <string name="activity_checkin_title">Check-In</string>
	<!-- Help -->
    <string name="activity_help_title">Help</string>
    <!-- FavoritesActivity -->
    <string name="activity_favorites_title">Favorites</string>
	<!-- About -->
	<string name="activitity_about_title">About</string>
    <!-- SettingsActivity -->
    <string name="activity_settings_title">Settings</string>
    <!-- Profile -->
    <string name="activity_profile">Profile</string>
    <!-- Change password -->
    <string name="activity_change_password">Change Password</string>
    <string name="Change_Old_pass">Old password...</string>
    <string name="Change_New_pass">New password...</string>
    <string name="Change_Conf_pass">Confirm password...</string>
    <string name="Change_Save">Save</string>
    <string name="Change_Cancel">Cancel</string>
    <string name="Change_title_text">To change your password, please complete the following information.</string>
    
    <!-- RegisterActivity -->
    <string name="activity_register_title">Create New Account</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_search_item">Search</string>
    <string name="activity_register_tvTitle">Register to use the advanced futures of the system</string>
    <string name="activity_register_edtFullName">Enter your full name &#8230;</string>
    <string name="activity_register_edtEmail">Enter your email &#8230;</string>
    <string name="activity_register_edtPassword">Enter your password &#8230;</string>
    <string name="activity_register_edtConfirmPassword">Confirm password &#8230;</string>
    <string name="activity_register_tvBirthDay">Birthday</string>
    <string name="activity_register_edtBirthDay">Day / Month / Year</string>
    <string name="activity_register_tvGender">Gender</string>
    <string name="activity_register_rbMale">Male</string>
    <string name="activity_register_rbFemale">Female</string>
    <string name="activity_register_btnRegister">Register</string>
    <string name="activity_register_btnReset">Reset</string>
    <string name="view_checkin_title">View CheckIn</string>
    <string name="description">Description&#8230;</string>

    <!-- LoginActivity -->
    <string name="activity_login_title">Login</string>
    <string name="activity_login_tvTitle">Login to use the advanced futures of the system!</string>
    <string name="activity_login_edtEmail">Enter your email &#8230;</string>
    <string name="activity_login_edtPassword">Enter your password &#8230;</string>
    <string name="activity_login_linkForgotPassword"><u>Forgot password?</u></string>
    <string name="activity_login_btnLogin">Login</string>
    <string name="activity_login_btnCancel">Cancel</string>
    <string name="activity_login_tvDoNotHaveAccount">Do not have an account?</string>
    <string name="activity_login_tvLinkRegister"><u>register</u></string>
    <string name="activity_login_tvNow">now</string>

    <!-- ForgotPasswordActivity -->
    <string name="activity_forgot_password_title">Forgot password</string>
    <string name="activity_forgot_password_tvTitle">To reset your password, please first identify your account!</string>
    <string name="activity_forgot_password_edtEmail">Enter your email&#8230;</string>
    <string name="activity_forgot_password_btnResetPassword">Reset password</string>

    <!-- ProfileActivity -->
    <string name="activity_profile_title">Profile</string>
    <string name="activity_profile_tvProfilePicture">Profile picture:</string>
    <string name="activity_profile_tvTakeAPhoto"><u>Take a photo</u></string>
    <string name="activity_profile_tvChooseFromGallery"><u>Choose from Gallery</u></string>
    <string name="activity_profile_tvFullName">Full name</string>
    <string name="activity_profile_tvEmail">Email</string>
    <string name="activity_profile_tvBirthDay">Birthday</string>
    <string name="activity_profile_tvGender">Gender</string>
    <string name="bt_take_photo_title">Take a photo</string>
    <string name="bt_choose_image_title">Choose from gallery</string>
    <string name="crop_image_no_app">Can not find Crop Image App in your device.</string>
    <string name="crop_image_dialog_title">Choose Crop Image App</string>
    <string name="error_network_connection">Cannot connect to server! Please check network connection!</string>
    <string name="title_activity_search_map">SearchMapActivity</string>
    <string name="title_connection_timeout">Connection time out. Please check internet connection!</string>
</resources>