<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bitmap" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/titlebar_logo" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/activity_firstuse_title" />
    </LinearLayout>

    <RelativeLayout
        style="@style/Body"
        android:padding="30dp" >

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_firstuse_tvWelcome"
            android:textColor="#00a8ec"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_firstuse_tvTitle"
            android:textColor="#800000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/BlueButton"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:onClick="onClickRegister"
            android:text="@string/activity_firstuse_button_register" />

        <Button
            android:id="@+id/btnNotNow"
            style="@style/BlueButton"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="onClickNotNow"
            android:text="@string/activity_firstuse_button_notnow" />
    </RelativeLayout>

</RelativeLayout>