<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bitmap" >

    <LinearLayout style="@style/TitleBar" >
        <ImageView
            style="@style/TitleBarBack"
            android:contentDescription="@string/app_name"
            android:onClick="onClickBack" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/activity_forgot_password_title" />
    </LinearLayout>

    <RelativeLayout style="@style/Body" >
        
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_launcher" />
        
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:shadowColor="#333"
            android:shadowDx="1"
            android:shadowRadius="2"
            android:text="@string/activity_forgot_password_tvTitle"
            android:textColor="#00a8ec"
            android:textSize="20dp" />
        
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tvTitle"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/activity_forgot_password_edtEmail"
            android:singleLine="true" />
        
        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/activity_forgot_password_btnResetPassword"
            android:onClick="onClickResetPassword" />
        
	</RelativeLayout>
    

</RelativeLayout>