<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bitmap" >

    <LinearLayout style="@style/TitleBar" >
        <ImageView
            style="@style/TitleBarBack"
            android:contentDescription="@string/app_name"
            android:onClick="onClickBack" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/activity_change_password" />
    </LinearLayout>

    <RelativeLayout style="@style/Body" >
        
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_launcher" />
        
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:shadowColor="#333"
            android:shadowDx="1"
            android:shadowRadius="2"
            android:text="@string/Change_title_text"
            android:textColor="#00a8ec"
            android:textSize="18dp" />
        
        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tvTitle"
            android:singleLine="true"
            android:background="@drawable/edit_text_frame"
            android:inputType="textPassword"
            android:hint="Old password..."/>"

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/edtFullName"
            android:layout_below="@id/edtFullName"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_frame"
            android:inputType="textPassword"
            android:hint="New password..." />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/edtEmail"
            android:layout_below="@id/edtEmail"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_frame"
            android:inputType="textPassword"
            android:hint="Confirm password..." />
        
            <LinearLayout
                android:id="@+id/footer"
                style="@android:style/ButtonBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtPassword"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Change_Save" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Change_Cancel" />
            </LinearLayout>
        
	</RelativeLayout>
    

</RelativeLayout>